# SoftHeart

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
example/: Game.cpp  Game.hpp  UltimateTTT.cpp
src/: Board.cpp  Board.hpp  Engine.cpp  Engine.hpp  FastRandom.hpp  Timer.cpp  Timer.hpp  Tree.cpp  Tree.hpp  Utils.hpp  Vec.hpp  main.cpp  u3tp-simple.cpp  u3tp-simple.hpp  u3tp.cpp  u3tp.hpp
